# Zenith-dataplane

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  TUTORIAL.md
.github/workflows/: ci.yml  pages.yml  python-release.yml  release.yml  security.yml  slsa-release.yml  wheels.yml
bench/reports/: BENCHMARK_REPORT.md
cli/: Cargo.toml
codegen/: Cargo.toml
codegen/src/: main.rs
codegen/src/generators/: plugin.rs
codegen/src/templates/: mod.rs
control-plane/: Cargo.toml
control-plane/src/: main.rs
core/: Cargo.toml
core/src/: admin_api.rs  engine.rs  lib.rs  validation.rs  wasm_host.rs
dashboard/: index.html
dataplane/src/: router.rs
deploy/helm/zenith/: Chart.yaml  values.yaml
deploy/helm/zenith/templates/: _helpers.tpl  scheduler-deployment.yaml
docs/: ARCHITECTURE.md  ARTIFACT_SIGNING.md  BENCHMARK_REPORT.md  CHECKSUMS.txt  CLIENT_PROPOSAL.md  FREE_SOFTWARE.md  FRR_LRR_ASSESSMENT.md  GPU_ACCELERATION.md  IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  JEPSEN_TEST_REPORT.md  KNOWN_ISSUES.md  MARKETING.md  PLUGIN_GUIDE.md  PUBLISHING.md  PYTORCH_GUIDE.md  QA_REPORT.md  ROADMAP_v2.md  SBOM.json  SECURITY_REPORT.md  TECHNICAL_PROPOSAL.md  TEST_REPORT.md  TRACEABILITY_MATRIX.md  TUTORIAL.md
docs/api/: openapi.yaml
examples/: README.md  demo_app.py  filter.wasm  jax_example.py  pytorch_example.py  sklearn_example.py  tensorflow_example.py  validate_demo.py  validate_phase3.py  validate_turbo.py  zenith_full_test_colab.ipynb  zenith_gpu_colab_test.ipynb  zenith_quickstart.py  zenith_tensorrt_colab_test.ipynb  zenith_wasm_test_colab.ipynb
ffi-bindings/: README.md  zenith_core.h  zenith_numa.h
ffi-bindings/cpp/: CMakeLists.txt  numa_backend.cpp
ffi-bindings/cpp/tests/: numa_test.cpp
ffi-bindings/examples/: test_go_ffi.go  test_python_ffi.py
host-api/: Cargo.toml  README.md
host-api/examples/: plugin_with_host_api.rs.txt
host-api/src/: lib.rs
host-api/src/fs/: mod.rs
host-api/src/http/: mod.rs
host-api/src/kv/: mod.rs
host-api/src/logging/: mod.rs
host-api/src/random/: mod.rs
huggingface/: README.md  app.py
notebooks/: 00_quick_test.ipynb  01_pytorch_cifar10.ipynb  02_jax_training.ipynb  03_benchmark_1gb.ipynb  benchmark_1gb_v2.ipynb
plugins/ai_preprocessing/: README.md
plugins/ai_preprocessing/image_ops/: Cargo.toml
plugins/ai_preprocessing/image_ops/src/: lib.rs
plugins/ai_preprocessing/text_ops/: Cargo.toml
plugins/ai_preprocessing/text_ops/src/: lib.rs
release/: RELEASE_NOTES.md
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/engine/: mod.rs
runtime/src/scheduler/: mod.rs
runtime/src/vm/: mod.rs
sdk-python/: Cargo.toml  README.md  pyproject.toml
sdk-python/src/: buffer.rs  engine.rs  lib.rs  plugin.rs
sdk-python/zenith/: __init__.py  engine.py  loader.py  scheduler.py
sdk-python/zenith/tensorflow/: __init__.py  dataset.py
sdk-python/zenith/torch/: __init__.py  dataloader.py  dataset.py
sdk-python/zenith_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
storage/: Cargo.toml
storage/src/: lib.rs
tests/: README.md  run_e2e.sh
tests/jepsen/: README.md  docker-compose.jepsen.yml  jepsen_test.py
tools/: README.md  benchmark.py  build_plugin.sh  inspector.py
zenith-bench/src/: lib.rs  main.rs
zenith-proto/: Cargo.toml
zenith-runtime-cpu/: Cargo.toml  build.rs
zenith-runtime-cpu/benches/: numa_allocator.rs  ringbuffer.rs
zenith-runtime-cpu/src/: buffer.rs  circuit_breaker.rs  dataloader.rs  health.rs  io.rs  lib.rs  numa.rs  numa_ffi.rs  s3.rs  uring.rs
zenith-runtime-cpu/src/turbo/: onnx.rs  precision.rs
zenith-runtime-gpu/src/: cuda.rs  multigpu.rs  nvml.rs  tensorrt.rs
zenith-scheduler/: Cargo.toml
zenith-scheduler/src/: agent.rs  job.rs  node.rs  scheduler.rs  state.rs
zenith-scheduler/src/api/: grpc.rs  rest.rs
