[package]
name = "zenith-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
zenith-core = { path = "../core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
