[package]
name = "zenith-codegen"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "zenith-codegen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "6.3"
anyhow = "1.0"
toml = "0.7"
