[package]
name = "zenith-codegen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zenith-codegen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "5.0"
anyhow = "1.0"
toml = "0.9"
