[package]
name = "zenith-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Data structures
arrow = { version = "53.0.0", features = ["ipc", "ffi"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# WASM Runtime
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"
arc-swap = "1.7"

# Serialization / Telemetry
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.31"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
axum = "0.7"
serde_json = "1.0"
