[package]
name = "zenith-core"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance data processing core for ML training pipelines"
repository = "https://github.com/vibeswithkk/Zenith-dataplane"
keywords = ["machine-learning", "data-loading", "arrow", "pytorch", "training"]
categories = ["science", "asynchronous"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Data structures
arrow = { version = "57.1.0", features = ["ipc", "ffi"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# WASM Runtime
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"
arc-swap = "1.7"

# Serialization / Telemetry
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.31"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.0"
axum = "0.8"
serde_json = "1.0"
