[package]
name = "zenith-runtime"
version = "0.3.0"
edition = "2021"

[dependencies]
zenith-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
notify = "8.2" # For file watching (Hot Reload)
crossbeam = "0.8"
futures = "0.3"
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"

[dev-dependencies]
tempfile = "3.10"
wat = "1.0"
