[package]
name = "zenith-python"
version = "0.1.0"
edition = "2021"
description = "PyO3 bindings for Zenith AI - High-Performance Data Infrastructure for ML"
license = "Apache-2.0"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Arrow for zero-copy data transfer
arrow = { version = "53.0.0", features = ["pyarrow"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
