[package]
name = "zenith-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protocol buffer definitions for Zenith infrastructure"

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
serde.workspace = true

[build-dependencies]
tonic-build = "0.14"
